[package]
name = "zipsource"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
pretty_env_logger = "0.4.0"
walkdir = "2"
zip = "0.6.3"
pathdiff = "0.2.1"
size = "0.4"
threadpool = "1.8.1"