[package]
name = "zipsource"
version = "0.1.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathdiff = "0.2.3"
size = "0.5.0"
threadpool = "1.8.1"
walkdir = "2.5.0"
zip = "6.0.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = "line-tables-only"